# djtagspecs

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test.yml  zizmor.yml
spec/: SPECIFICATION.md  schema.json
src/django_tagspecs/: __init__.py  __main__.py  models.py
src/djtagspecs/: __init__.py  __main__.py  catalog.py  introspect.py  models.py
tests/: catalog.toml  settings.py  test_catalog.py  test_introspect.py  test_main.py
